[package]
name = "advent-of-code-2019"
version = "0.1.0"
authors = ["Chrys Lovelace <chryslovelace@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"
itertools = "*"
crossbeam = "*"
num = "*"

[lib]
name = "aoc2019"
path = "src/lib.rs"